# RPI-Code

./: .gitignore  Homing.py  README.md  start_robot.sh
arm_control/: CMakeLists.txt
arm_control/config/: ros2_controllers_hw.yaml
arm_control/description/ros2_control/: hardware_ros2_control.xacro
arm_control/description/urdf/: test.urdf.xacro
arm_control/launch/: arm.launch.py  arm.launch_backup_19_5.py  hardware_only.launch.py
dev_ws/src/arm_control/: package.xml
dev_ws/src/arm_control/config/: ros2_controllers_hw.yaml
dev_ws/src/arm_control/description/ros2_control/: hardware_ros2_control.xacro
dev_ws/src/gripper_controller/: package.xml
dev_ws/src/load_cell/: setup.cfg
dev_ws/src/load_cell/load_cell/: jacobian_logger.py
dev_ws/src/robotv2_description/: CMakeLists.txt
dev_ws/src/robotv2_description/urdf/mech/: robotv2_arm.urdf.xacro
dev_ws/src/robotv2_description/urdf/robots/: robotv2.urdf.xacro
dev_ws/src/ros_odrive/odrive_explorer/: CMakeLists.txt  package.xml
dev_ws/src/ros_odrive/odrive_explorer/description/urdf/: diffbot.urdf.xacro  multi_dc.urdf.xacro
dev_ws/src/ros_odrive/odrive_explorer/launch/: single_dc_test.launch.py
dev_ws/src/ros_odrive/odrive_ros2_control/src/: odrive_hardware_interface.cpp
dev_ws/src/ros_waveshare/: README.md
dev_ws/src/ros_waveshare/waveshare_explorer/: package.xml
dev_ws/src/ros_waveshare/waveshare_explorer/description/ros2_control/: example.ros2_control.xacro  single_servo.ros2_control.xacro
dev_ws/src/ros_waveshare/waveshare_explorer/description/urdf/: single_servo.urdf.xacro
dev_ws/src/ros_waveshare/waveshare_explorer/launch/: example.launch.py
dev_ws/src/ros_waveshare/waveshare_node/: README.MD
dev_ws/src/ros_waveshare/waveshare_ros2_control/: waveshare_hardware_interface.xml
gripper_controller/: setup.py
gripper_controller/gripper_controller/: gripper_controller.py
load_cell/: package.xml  setup.py
load_cell/load_cell/: load_cell_node.py
robotv2_description/: package.xml
robotv2_description/launch/: robot_state_publisher.launch.py
robotv2_description/urdf/mech/: base.urdf.xacro  gripper.urdf.xacro
robotv2_description/urdf/sensors/: depthai.urdf.xacro
ros_odrive/odrive_explorer/config/: multi_dc_controllers.yaml  single_dc_controllers.yaml
ros_odrive/odrive_explorer/description/ros2_control/: multi_dc_ros2_control.xacro  single_dc.ros2_control.xacro
ros_odrive/odrive_explorer/description/urdf/: single_dc.urdf.xacro
ros_odrive/odrive_explorer/launch/: botwheel_explorer.launch.py  multi_dc_test.launch.py
ros_odrive/odrive_node/launch/: odrive_multi_motors.launch.py
ros_waveshare/waveshare_base/: CMakeLists.txt  package.xml
ros_waveshare/waveshare_base/src/: set_id.cpp
ros_waveshare/waveshare_explorer/: CMakeLists.txt
ros_waveshare/waveshare_explorer/config/: example_controllers.yaml  single_servo_controllers.yaml
ros_waveshare/waveshare_explorer/description/urdf/: example.urdf.xacro  single_servo.urdf.xacro
ros_waveshare/waveshare_explorer/launch/: single_servo_test.launch.py
ros_waveshare/waveshare_ros2_control/: CMakeLists.txt  package.xml
ros_waveshare/waveshare_ros2_control/src/: waveshare_hardware_interface.cpp
tof_sensor/: package.xml  setup.cfg  setup.py
tof_sensor/tof_sensor/: tof_node.py
